@@ -1,6 +1,6 @@
 /* upstart
  *
- * Copyright © 2006 Canonical Ltd.
+ * Copyright © 2007 Canonical Ltd.
  * Author: Scott James Remnant <scott@ubuntu.com>.
  *
  * This program is free software; you can redistribute it and/or modify
@@ -48,6 +48,16 @@
  **/
 #ifndef DEV_NULL
 #define DEV_NULL "/dev/null"
+#endif
+
+/**
+ * DEV_FD:
+ *
+ * Directory containing the special file descriptor nodes for the running
+ * process.
+ **/
+#ifndef DEV_FD
+#define DEV_FD "/dev/fd"
 #endif
 
 
